--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,15 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
   <build>
     <plugins>
       <plugin>
@@ -25,5 +30,4 @@
       </plugin>
     </plugins>
   </build>
-</project>
 </project>
